--- a/CAPSLOCKLOAN/web/styles/layout2.css
+++ b/CAPSLOCKLOAN/web/styles/layout2.css
@@ -252,3 +252,23 @@ label:before {
     padding-left:10px; 
     padding-right:10px; 
   }
+  
+  
+/*----------------------------------------------Submit Button-------------------------------------*/
+.fsSubmitButton
+{
+    padding: 0px 2px 0px !important;
+    font-size: 14px !important;
+    background-color: #0099cc;
+    font-weight: bold;
+    text-shadow: 1px 1px #0099cc;
+    color: #ffffff;
+    border-radius: 100px;
+    -moz-border-radius: 100px;
+    -webkit-border-radius: 100px;
+    border: 1px solid #0099cc;
+    cursor: pointer;
+    box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5) inset;
+    -moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5) inset;
+    -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5) inset;
+}
