Updated fonts and add credit page.

--- a/CAPSLOCKLOAN/web/styles/layout.css
+++ b/CAPSLOCKLOAN/web/styles/layout.css
@@ -14,7 +14,7 @@
 
 html{overflow-y:scroll;}
 
-body{margin:0; padding:0; font-size:13px; font-family:Tahoma, Geneva, sans-serif; color:#737373; background-color:#1F1F1F;}
+body{margin:0; padding:0; font-size:15px; font-family:'Oswald', 'Myriad Pro', arial, serif; color:#737373; background-color:#1F1F1F;}
 
 h7{font-family: 'BebasNeueRegular', 'Arial Narrow', Arial, sans-serif; font-size:20px;}
 h8{font-family: 'BebasNeueRegular', 'Arial Narrow', Arial, sans-serif; font-size:16px;}
